<resources>
    <string name="app_name">AppTrab</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="Animal">

        <item>Selecione o tipo de animal... </item>
        <item>Cachorro </item>
        <item>Gato </item>
        <item>Hamster </item>

    </string-array>

    <string name="cadastroanimais">Cadastro Animais </string>
    <string name="nome">Nome </string>
    <string name="nomehint">Digite seu nome </string>
    <string name="petnome">Pet </string>
    <string name="nomepethint">Digite o nome do seu pet... </string>
    <string name="idadepethint">Digite a idade do seu pet... </string>
    <string name="salvar">Salvar </string>

</resources>